# buzee-tauri

./: .gitignore  LICENSES_DEPENDENCIES.txt  README.md  VISION&ROADMAP.md  components.json  database_sync_logic.txt  logbook.md  package-lock.json  package.json  svelte.config.js  test.txt  todo.xlsx
src/: app.d.ts  app.html  hooks.client.ts
src-tauri/: Cargo.toml  LICENSES_DEPENDENCIES.txt  tauri.conf.json
src-tauri/binaries/: textra-aarch64-apple-darwin
src-tauri/capabilities/: main.json
src-tauri/crates/drag/: Cargo.toml
src-tauri/crates/drag/src/: lib.rs
src-tauri/crates/drag/src/platform_impl/macos/: mod.rs
src-tauri/crates/drag/src/platform_impl/windows/: mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: arc_read.rs  chrome_read.rs  context_menu.rs  custom_types.rs  database.rs  db_sync.rs  drag.rs  error_type.rs  file_watch.rs  firefox_read.rs  housekeeping.rs  indexing.rs  ipc.rs  main.rs  schema.rs  tantivy_index.rs  user_prefs.rs  utils.rs  window.rs
src-tauri/src/database/: crud.rs  mod.rs  models.rs  queries.rs  schema.rs  search.rs
src-tauri/src/text_extraction/: csv.rs  docx.rs  epub.rs  image.rs  mobi.rs  mod.rs  pdf.rs  pptx.rs  txt.rs  xlsx.rs
src/layout/: SettingsButton.svelte  StatusBar.svelte  TopBar.svelte
src/lib/: stores.ts
src/lib/components/header/: userDropdown.svelte
src/lib/components/onboarding/: game.svelte  onboarding.svelte  permissions.svelte  question.svelte  waiting.svelte
src/lib/components/results/: LoadMoreButton.svelte  ResultTextPreview.svelte  dataTable.svelte  iconsGrid.svelte  resultsTable.svelte  svelteTable.svelte
src/lib/components/search/: DatePicker.svelte  FiletypeDropdown.svelte  FiletypeSelector.svelte  LocationSelector.svelte  NLPDateRange.svelte  ResultViewToggleBar.svelte  ResultsPerPageSelector.svelte  SearchFilters.svelte  TimeRangeOuter.svelte  searchBar.svelte  searchSuggestions.svelte
src/lib/components/settings/: IgnoreDialog.svelte  SelectIndicator.svelte  fileTypeList.svelte  ignoreList.svelte  syncStatusButton.svelte
src/lib/components/sidebar/: sidebarMenu.svelte
src/lib/components/stats/: UniqueDocumentProfile.svelte
src/lib/components/ui/: FileCategoryIcon.svelte  FileTypeIcon.svelte  confettiButton.svelte  dropdown.svelte  dropdownOption.svelte  popoverIcon.svelte
src/lib/components/ui/button/: index.ts
src/lib/components/ui/command/: command-input.svelte  command-list.svelte
src/lib/components/ui/dialog/: dialog-content.svelte
src/lib/components/ui/slider/: slider.svelte
src/lib/utils/: compromise.ts  dbUtils.ts  eventListeners.svelte  fileTable.ts  fileUtils.ts  keyboardListeners.svelte  miscUtils.ts  queryParsing.ts  searchItemUtils.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/deep-breathing/: +page.svelte
src/routes/gandalf/: +page.svelte
src/routes/magic/: +page.svelte
src/routes/magic/deep-breathing/: +page.svelte
src/routes/magic/extract-pdf/: +page.svelte
src/routes/magic/extract-text/: +page.svelte
src/routes/magic/scratchpad/: +page.svelte
src/routes/magic/stats/: +page.svelte
src/routes/magic/tips/: +page.svelte
src/routes/magic/tips-shortcuts/: +page.svelte
src/routes/onboarding/: +page.svelte
src/routes/search/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/filetype/: +page.svelte
src/routes/settings/filetype-list/: +page.svelte
src/routes/settings/ignore/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/tips/: +page.svelte
src/routes/uninstall/: +page.svelte
src/utils/: firebase.ts
static/: bootstrap-icons.css  checkmark-done.json  custom.css  meta.json
