[package]
name = "buzee-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
open = "5.1.1"
dotenvy = "0.15.7"
dirs = "5.0.1"
diesel = { version = "2.1.4", features = ["sqlite", "chrono", "time"] }
chrono = "0.4.26"
notify = "4.0.17"
jwalk = "0.8.1"
tokio = { version = "1.36.0", features = ["full"] }
docx = "1.1.2"
dotext = "0.1.1"
log = "0.4.21"
simple-logging = "2.0.2"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.2"
lopdf = { version = "0.32.0", features = ["pom", "pom_parser"] }
