[package]
name = "buzee"
version = "0.1.1"
description = "Find your documents, effortlessly"
authors = ["Buzilla Inc."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Buzilla Inc."]
license = "Apache-2.0 OR MIT"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-updater = { version = "2.0.0-beta", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0.0-beta"
drag = { path = "./crates/drag", version = "0.4.0", features = [ "serde" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
open = "5.1.1"
dotenvy = "0.15.7"
dirs = "5.0.1"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "chrono", "time"] }
chrono = "0.4.26"
notify = "4.0.17"
jwalk = "0.8.1"
dotext = "0.1.1"
log = "0.4.21"
simple-logging = "2.0.2"
regex = "1.10.3"
lazy_static = "1.4.0"
tauri-plugin-global-shortcut = "2.0.0-beta.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-graceful-shutdown = "0.14.3"
epub = "2.1.1"
mobi = "0.8.0"
schedule = "0.1.0"
futures = "0.3.30"
base64 = "0.21"
serialize-to-javascript = "0.1.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "0.6"
pdf-extract = "0.7.7"
jfs = "0.9.0"
xml-rs = "0.8.20"
